test/libhyperion/syntaxTests/receiveZond/default_visibility.hyp
contract C {
    // Check that visibility is also enforced for the receive zond function.
    receive() {}
}
// ----
// SyntaxError 4937: (93-105): No visibility specified. Did you intend to add "external"?
// DeclarationError 7793: (93-105): Receive zond function must be payable, but is "nonpayable".
// DeclarationError 4095: (93-105): Receive zond function must be defined as "external".
